test/invalid/CannotCastFromBoolean2Integer/CannotCastFromBoolean2Integer.plume

/**
 *
 * @author 37029, Juliana Franco
 *
 */
class CannotCastFromBoolean2Integer extends Object is

  method main : () -> String is
    (Integer)true